# affctrllib

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
affctrllib/: __init__.py  _sockutil.py  affcomm.py  affctrl.py  affetto.py  affmock.py  affposctrl.py  affstate.py  filter.py  logger.py  ptp.py  timer.py
apps/: capture_poses.py  ctrl_thread_test.py  filter_sensory_data.py  filter_test.py  listen_sensory_data.py  move_at_random.py  ptp_test.py  read_sensory_data.py  send_sinusoidal_command.py  spawn_affetto_mock.py  spontaneous_movement.py  strike_poses.py
apps/config/: command_profile_example.toml  config_example.toml  keyframe_example.toml
apps/scripts/: plot_ctrl_thread_test.py  plot_filter_sensory_data.py  plot_filter_test.py  plot_ptp_test.py  plot_read_sensory_data.py  plot_send_sinusoidal_command.py  plot_spontaneous_movement.py  plot_strike_poses.py
src/affctrllib/: __init__.py  _periodic_runner.py  _sockutil.py  affcomm.py  affctrl.py  affetto.py  affmock.py  affposctrl.py  affstate.py  comm.py  const.py  logger.py  ptp.py  rate.py  sensor.py  socket.py  timer.py
tests/: test_affcomm.py  test_affctrl.py  test_affctrllib.py  test_affetto.py  test_affmock.py  test_affposctrl.py  test_affstate.py  test_comm.py  test_filter.py  test_logger.py  test_periodic_runner.py  test_ptp.py  test_rate.py  test_sensor.py  test_socket.py  test_sockutil.py  test_timer.py
tests/config/: alternative.toml  altmock.toml  chain1.toml  chain2.toml  default.toml  empty.toml  mock.toml
