[project]
name = "affctrllib"
version = "0.1.0"
description = "Small library to control Affetto"
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
dependencies = [
    "tomli>=2.0.1",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.0",
]

[tool.pyright]
extraPaths = [
    "__pypackages__/3.10/lib",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
