[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "affctrllib"
description = "Affetto Control Library"
authors = [
    {name = "Hiroshi Atsuta", email = "atsuta@ieee.org"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.4",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/affetto-software/affctrllib"
Repository = "https://github.com/affetto-software/affctrllib"
Issues = "https://github.com/affetto-software/affctrllib/issues"
Discussions = "https://github.com/affetto-software/affctrllib/discussions"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
    "nox>=2023.4.22",
]

[tool.pdm.scripts]
test = "pytest tests/"
# lint = "pre-commit run --all-files"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["affctrllib"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
# venvPath = "."
# venv = ".venv"
# extraPaths = [
#     ".venv",
#     "__pypackages__/3.10/lib",
# ]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
